--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
     src:url(../accest/font/RACING\ HARD.ttf)
 }
 
+.logo {
+    display: inline-block;
+    background-color: aquamarine;
+    margin: auto;
+    position: relative;
+}
 
 .classh1 {
     color: white;
@@ -32,19 +38,15 @@ transition: transform 2s;
     margin: auto;
 
  }
-
-
-
-
-
-.logo {
-    display: inline;
-    background-color: aquamarine;
+ .classh3 {
+    text-align: center;
+    font-family: racing hard;
+    color: white;
+    font-size: xxx-large;
     margin: auto;
-
+    display: flexbox;
 
 }
-
 
 
 .claseparrafo {
@@ -52,10 +54,8 @@ transition: transform 2s;
     font-size: x-large;
     text-align: center;
     margin: auto;
-
-    
-
 }
+
 
 .claseparrafo2 {
     color: white;
@@ -63,39 +63,19 @@ transition: transform 2s;
     text-align: center;
     margin: auto;
 
-
 }
 
 
-
-.classh3 {
-    text-align: center;
-    font-family: racing hard;
-    color: white;
-    font-size: xxx-large;
-    margin: auto;
-
-}
-
-.classDivsectionone{
-    width: 100px;
-
-}
-
-.classfooter {
-    text-size-adjust: buttom;
-}
 
 .ClaseFormulario {
     color: white
 }
 
 .estilo-h1-servicios {
-
     color: rgb(255, 255, 255) ;
 }
 
-#ID-divh1-servicios{
+#ID-divh1-servicios {
     background-color: rgba(255, 255, 255, 0);
 }
 
@@ -105,7 +85,7 @@ transition: transform 2s;
 
 .class-div-nav2{
 
-    text-align: right;
+     text-align: right;
     display: inline-block;
     padding: 5px;
     background-color:rgb(255, 255, 255);;
@@ -161,37 +141,64 @@ transition: transform 2s;
 }
 
 .div-header{
-    position:relative;
+    justify-content: bottom;
+
+}
+
+.classvideo{
+    text-align: center;
+    margin: auto;
+
+
+}
+
+#gridheader {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
+#section-video{
+    display: flexbox;
+    position: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.class-icono-ig{
+    margin: 10px;
+    width: 30px;
+    height: 30px;
     
+}
+.class-icono-wpp{
+    margin: 10px;
+    width: 30px;
+    height: 30px;
+}
+.class-icono-fc{
+    margin: 10px;
+    width: 30px;
+    height: 30px;
 }
 
 
 
-
-
-/* .div-img{
-    width: 100%;
-    height: 100%;
-
-} */
 
 main section div img{
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    
+    /* width: 100vw;
+    height: 100vh; */
+
 
 }
 
 
-footer span {
-    color: aliceblue;
-    justify-content: flex-start;
-    margin: auto;
 
-}
+header nav ul li{
 
-div nav ul li{
+    display: grid;
     text-align: right;
     display: inline-block;
     padding: 5px;
@@ -200,14 +207,10 @@ div nav ul li{
     border: 3px solid;
     border-radius: 5px;
     font-family: racing hard;
-    margin: auto;
-
-
-
 }
 
+
 body {
-    max-width: 100%;
     width: 100vw;
     height: 100vh;
     margin: auto;
@@ -218,42 +221,34 @@ body {
     background-position: bottom ;
     justify-content: space-between;
 }
+  
 
-.classvideo{
-    text-align: center;
-    margin: auto;
 
+header{
+    grid-area: header;
 }
-    /* Estilos Header */
 
-/* header {
-    width: 100%;
-    height: 30vh;
-    background-color: rgb(169, 169, 177;
-
+main{
+    grid-area: main;
 }
-nav ul li a {
-    text-decoration: none;
-} */
 
-    /* Estilos Main */
-/*
-main {     background-color: rgba(100, 120, 181, 0.399);;
-    width: 100%;
-    height: 60vh;
-    background-color: rgba(100, 120, 181, 0.399);
-
-} */
-
-    /* Estilos footer */
 
 footer {
-
-   
+    grid-area: footer;
+    width: 100vw;
+    height: 10vh;
+    padding-top: 90px;
+    margin: 0px;
+    color: aliceblue;
 
 }
 
-RESPONSIVE
+/* footer span {
+
+} */
+
+
+/* RESPONSIVE */
 
 
 /* @media only screen and (min-width: 1200px) {
@@ -270,26 +265,50 @@ RESPONSIVE
 
 /* Desktok first */
 
+@media only screen and (max-width: 1400px) {
+
+
+}
+
 @media only screen and (max-width: 1200px) {
-    .classvideo{
-     margin: 20px;
-    
-    }
+
+
 }
 
 @media only screen and (max-width: 768px){
 
-    main {
-        flex-direction: column;
-    }
-    
-}
 
-@media only screen and (max-width: 468px) {
+
+@media only screen and (max-width: 480px) {
 
 }
 
 @media only screen and (max-width: 320px) {
+
+    .classvideo{
+        display: none;
+       }
+}
+
+}
+
+@media only screen and (min-width: 320px) {
+
+
+
+}
+
+@media only screen and (min-width: 480px) {
+
+}
+
+@media only screen and (min-width: 780px) {
+
+}
+@media only screen and (min-width: 1200px) {
+
+}
+@media only screen and (min-width: 1400px) {
 
 }
 
