--- a/style.css
+++ b/style.css
@@ -1,91 +1,128 @@
-*{
- margin: 0; padding: 0;
- box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
 }
+
 @font-face {
     font-family: racing hard;
-    src:url(../accest/font/RACING\ HARD.ttf)
+    src: url(../accest/font/RACING\ HARD.ttf)
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     background-color: rgb(193, 193, 193);
 }
 
-h1{ font-size: 3.5em;
+h1 {
+    font-size: 4.5em;
     font-family: racing hard;
     color: white;
 
 }
-h2{font-size: 2.7em;
+
+h2 {
+    font-size: 6.9em;
     font-family: racing hard;
 
 }
 
-h3{font-size: 2em;
+h3 {
+    font-size: 2em;
     font-family: racing hard;
 
 }
-p{font-size: 1.25em;
-    
 
-}
-ul{ text-decoration: none;
-    
-}
-li{
+p {
     font-size: 1.25em;
-    font-family: racing hard;
+
+
+}
+
+ul {
     text-decoration: none;
+
+}
+
+li {
+    list-style: none;
+    font-size: 2.8em;
+    font-family: racing hard;
+    
 }
 
 
-button{
+button {
+    height: 45px;
     font-size: 1.5em;
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 10px;
     border: 2px solid rgba(0, 0, 0, 0.5);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5) ;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     color: white;
     background-color: rgb(46, 27, 192);
 
 }
 
-button:hover{
-    background-color:rgb(29, 20, 95) ;
+
+button:hover {
+    
+    background-color: rgb(29, 20, 95);
 }
 
-.container{
+.container {
     max-width: 1400px;
     margin: auto;
 
 }
 
-header{
-    background-color:rgb(223, 223, 223)
+.class-comenzaya{
+    
+        height: 90px;
+        width: 513px;
+        font-size: 4.5em;
+        font-weight: bold;
+        padding: 10px 30px;
+        border-radius: 10px;
+        border: 2px solid rgba(0, 0, 0, 0.5);
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+        color: white;
+        background-color: rgb(46, 27, 192);
+    
+    }
+
+
+header {
+    background-color: rgb(223, 223, 223);
 
 }
 
-header .logo{
+header .logo {
     margin: 0;
     padding: 25px 30px;
     font-family: racing hard;
-    font-size: 2.9em;
+    font-size: 3.9em;
+    color: black;
 
 }
 
-header .container{
+header .container {
+    
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row-reverse;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 60px;
+    align-content: center;
 }
 
-header nav{
+header nav {
     display: flex;
     flex-direction: row;
     text-align: center;
@@ -100,48 +137,64 @@ header a {
     padding: 40px;
     text-decoration: none;
     
-}
-header a:hover{
-    color: rgb(31, 22, 103);
+
 }
 
-#hero{
+header a:hover {
+    color: rgb(31, 22, 103);
+
+}
+
+section #veni-a-aprender{
+    display: flex;
+    height: 150px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+a .a-veni-a-correr{
+    list-style: none;
+}
+
+#hero {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
     height: 90vh;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    
-    ,url(https://img.redbull.com/images/w_3000/q_auto,f_auto/redbullcom/2020/7/16/scektzz4qkw9kkkiu4pi/neumatico-mojado);
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url(https://img.redbull.com/images/w_3000/q_auto,f_auto/redbullcom/2020/7/16/scektzz4qkw9kkkiu4pi/neumatico-mojado);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 
 }
-
-#sobre-nosotros {
-
+div .servicios{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    height: 380px;
 }
 
+#sobre-nosotros {}
 
-#servicios-ventas{
+
+#servicios-ventas {
     background-color: rgb(25, 18, 79);
-    color:white;
-    
+    color: white;
+    height: 600px;
+
 }
 
-#servicios-ventas .container{
+#servicios-ventas .container {
     text-align: center;
     padding: 100px 0px;
 }
 
-#servicios-ventas h2{
+#servicios-ventas h2 {
     margin-top: 0%;
 }
 
@@ -151,19 +204,23 @@ header a:hover{
 
 }
 
-#caracteristicas .container{
+#caracteristicas .container {
     text-align: center;
     padding: 100px 12px;
 
 
 }
+#class-a{
+    text-decoration: none;
+    color: white
+}
 
-#caracteristicas li{
+#caracteristicas li {
     margin: 12px 0px;
     font-weight: bold;
 }
 
-#veni-a-aprender{
+#veni-a-aprender {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -173,44 +230,91 @@ header a:hover{
     background-color: rgb(168, 168, 168);
 }
 
+.carta-1{
+    width: 357px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    background-image: linear-gradient(0deg,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)),
+    url(https://images.unsplash.com/photo-1544824070-80c02697625c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80);
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+}
+.carta-2{
+    width: 398px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    background-image: linear-gradient(0deg,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)),
+    url(https://media.istockphoto.com/photos/woman-looking-happy-racing-in-gocarts-picture-id1393884726?k=20&m=1393884726&s=612x612&w=0&h=cb18m4fPcCec2bP7Xnd0MMjUanHYtP6K8z35Gwnk7dY=);
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+}
+    
+.carta-3{
+    width: 413px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    background-image: linear-gradient(0deg,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)),
+    url(https://media.istockphoto.com/photos/gokart-car-on-the-service-picture-id1419497662?k=20&m=1419497662&s=612x612&w=0&h=gSWUUuE1HbVBQIRHeXY7p92Uov140QxsIdmpVH_fl98=
+    );
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+
+}
+
 
 @media (min-width 720px) {
 
-    header{
+    header {
         position: fixed;
         width: 100%;
     }
-    header .container{
-            flex-direction: row;
-            justify-content: space-between;
+
+    header .container {
+        flex-direction: row;
+        justify-content: space-between;
     }
 
 
-    header nav{
+    header nav {
         flex-direction: row;
         padding-bottom: 0;
         padding-right: 20px;
 
     }
 
-    #sobre-nosotros .container{
-
-    }
 
 
-    #sobre-nosotros .img-container{
-        
-
-
-    }
-}
+  
 
 
 
 
 
-    
-    
+
 
 
 
